Core metadata tests were fixed.